--- a/package.json
+++ b/package.json
@@ -26,5 +26,8 @@
         "gulp-uglify": "^3.0.2",
         "sass": "^1.49.7",
         "tailwindcss": "^3.3.3"
+    },
+    "dependencies": {
+        "masonry-layout": "^4.2.2"
     }
 }
