--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
         "tailwindcss": "^3.3.3"
     },
     "dependencies": {
+        "flowbite": "^1.8.1",
         "masonry-layout": "^4.2.2"
     }
 }
